# drugdesign

./: .gitignore  LICENSE  README.md  fabfile.py  requirements.txt
config/: config_complexo_dm.txt
database/: info.txt
molecular_dynamics/gromacs/spark/: README.md  add_ions.py  basic_analysis.py  equilibration.py  genbox.py  gromacs_utils.py  make_ndx_trajectory.sh  md_description.py  molecular_dynamic.py  os_utils.py  pdb2gmx.py  pf_description.py  protein_flexibility.py  restricted_minimization.py  select.sh  trajectory.py  unrestricted_minimization.py
test/molecular_dynamics/gromacs/spark/: config.ini  eq.mdp  list_add_ions  list_box_size  list_equilibration  list_flex  list_molecular_dynamic  list_pdb2gmx  list_restricted_min  list_unrestricted_min  md.mdp  mdout.mdp  min_all.mdp  min_none.mdp  solv.mdp
test/performance/vina/spark/: run_buried_area.sh  run_prepare_file_for_analysis.sh
test/virtual_screening/vina/detect_hbonds/: dm_ns2b-ns3pro-bpti_0.pdbqt
test/virtual_screening/vina/detect_hbonds/structres/: dm_ns2b-ns3pro-bpti_0_-_ZINC00008492+----+10.pdbqt  dm_ns2b-ns3pro-bpti_0_-_ZINC00155677_2+----+12.pdbqt  dm_ns2b-ns3pro-bpti_0_-_ZINC00161697+----+10.pdbqt  dm_ns2b-ns3pro-bpti_0_-_ZINC00162130_1+----+16.pdbqt  dm_ns2b-ns3pro-bpti_0_-_ZINC00163377+----+9.pdbqt  dm_ns2b-ns3pro-bpti_0_-_ZINC00170149_1+----+11.pdbqt  dm_ns2b-ns3pro-bpti_0_-_ZINC00249512+----+13.pdbqt  dm_ns2b-ns3pro-bpti_0_-_ZINC00270671+----+7.pdbqt  (+89 more)
test/virtual_screening/vina/mpi/: README  README.md  config.ini
test/virtual_screening/vina/prepare_box/: 1vii_box.json  README  README.md  config.ini  list_pdb_prepare_box.txt
test/virtual_screening/vina/spark/: List_residues_for_buried_area.txt  List_residues_for_hydrogen_bind.txt  README  README.md  READMINE  config.ini  constraints  list_sd  run_all_analysis.sh
virtualscreening/: .gitignore  CMakeLists.txt  README  README.md  READMINE  ligand_database.py  mol2.py  pdbqt.py  prepare_input_files.py  prepare_ligand.py  prepare_receptor.py  vina.py  vs_main.py  vs_main_no_mpi.py  vs_preparation.py  zinc_db.py
virtualscreening/analysis/: READMINE  analysis.py  analysis_main.py  analysisio.py  call_analysis.py  histogram_energy.py  plot_energy_histogram.py  xvg_histogram_energy_values.py
virtualscreening/include/: defines.h  docking.h  docking_log.h  docking_type.h  enums.h  execution_information.h  futil.h  load_parameters.h  mpi_docking_type.h  mpi_owner.h  mpi_parameters_type.h  parameters_type.h  string_owner.h  vina.h
virtualscreening/spark/: analysis.py  buried_areas.py  create_file_for_analysis.py  gromacs_utils.py  ligand_efficiency.py  os_util.py  pdbqt_io.py  prepare_files_for_analysis.py  prepare_ligand.py  run_analysis.py  summary_statistics.py  vina_utils.py  vs_full_data_analysis.py
virtualscreening/src/: docking.c  docking_log.c  execution_information.c  futil.c  load_parameters.c  mpi_owner.c  prepare_ligand.c  vina.c  vs_main.c  vs_main_adaptative.c  vs_main_seq.c
virtualscreening/teste_send_receive/: config.conf  config_complexo_dm.txt  overall_docking_list.txt  vs_execution_information.txt
virtualscreening/teste_send_receive/ligand/: ZINC00173077.mol2  ZINC01037827.mol2  ZINC54979042_.mol2
virtualscreening/teste_send_receive/ligand/pdbqt/: ZINC00173077.pdbqt  ZINC01037827.pdbqt
virtualscreening/teste_send_receive/receptor/pdbqt/: ns3pro_dm_0.pdbqt  ns3pro_dm_100.pdbqt  ns3pro_dm_110.pdbqt  ns3pro_dm_120.pdbqt  ns3pro_dm_130.pdbqt  ns3pro_dm_140.pdbqt  ns3pro_dm_150.pdbqt
virtualscreening/vina/: README  README.md  READMINE
virtualscreening/vina/detect_hbonds/: CMakeLists.txt
virtualscreening/vina/detect_hbonds/src/: detect_hbonds.c
virtualscreening/vina/detect_interations/: CMakeLists.txt
virtualscreening/vina/detect_interations/src/: detect_interactions.c
virtualscreening/vina/mpi/include/: docking.h  execution_information.h  futil.h  parameters_type.h
virtualscreening/vina/mpi/src/: docking.c  futil.c  load_parameters.c  prepare_ligand.c  vs_main_adaptative.c  vs_main_blocking.c  vs_main_blocking_seq.c
virtualscreening/vina/python/: README.md  READMINE  pdbqt.py  prepare_input_files.py  prepare_ligand.py  prepare_receptor.py  vina.py  vs_main_no_mpi.py  zinc_db.py
virtualscreening/vina/python/analysis/: analysis_main.py  analysisio.py  docking_time.py  plot_energy_histogram.py
virtualscreening/vina/spark/: README.md  READMINE  buried_area_all_residues.py  buried_area_ligand.py  buried_area_receptor.py  buried_area_residue_selection.py  buried_areas.py  create_file_for_analysis.py  database_crud.py  database_io.py  docking_description.py  gromacs_utils.py  hydrogen_bind.py  hydrogen_bind_residue_selection.py  hydrogen_bond.py  hydrogen_bond_crud.py  hydrogen_bond_io.py  hydrogen_bond_residue_selection.py  json_utils.py  ligand_efficiency.py  log_to_json.py  make_ndx.sh  make_ndx_buried_area_ligand.sh  make_ndx_buried_area_receptor.sh  make_ndx_buried_area_receptor_res.sh  make_ndx_buried_area_total.sh  make_sasa_rec_buried_area_total.sh  mult_objective_selection.py  os_utils.py  pbox_description.py  pdb_io.py  pdbqt_io.py  prepare_box.py  prepare_complex_files_for_analysis.py  prepare_docking_list.py  prepare_files_for_analysis.py  prepare_ligand.py  prepare_receptor.py  prepare_receptor_spark.py  single_docking.py  (+5 more)
(+42 files in other folders)
